Attempt to fix bottom overlap and add Google analytics

--- a/cms/templates/pragyan19article/css/event_desc.css
+++ b/cms/templates/pragyan19article/css/event_desc.css
@@ -56,7 +56,16 @@ a:hover, a:active{
 }
 
 .divider{
-    padding: 0 !important; 
+    padding: 0 !important; 6.5
+}
+
+.tab-pane{
+    margin-top: 100px;
+}
+
+#mobiletab{
+    margin-top: 10vh;
+    margin-bottom: 15vh !important;
 }
 
 @media screen and (min-width: 768px) {
@@ -66,7 +75,7 @@ a:hover, a:active{
     }
 
     #mobiletab{
-        background-color: #bfbfbf;
+        background-color: #eeeeee;
         max-width: 70vw;
         border-radius: 10px;
     }
@@ -158,7 +167,8 @@ a:hover, a:active{
     }
 
     .tab-content{
-        min-height: 55vh;
+        min-height: 50vh;
+        max-height: 50vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -166,6 +176,7 @@ a:hover, a:active{
     }
 
     .clustertitle{
+        position: absolute;
         text-align:center; 
         color: white; 
         font-size: 8vw; 
