--- a/cms/templates/pragyan19inner/css/inner.css
+++ b/cms/templates/pragyan19inner/css/inner.css
@@ -14,7 +14,7 @@
 }
 
 #main{
-    top: 7vh;
+    top: 5vh;
 }
 
 a{
@@ -158,7 +158,8 @@ a:hover, a:active{
     }
 
     .tab-content{
-        min-height: 55vh;
+        min-height: 35vh;
+        max-height: 35vh;
         display: flex;
         align-items: center;
         justify-content: center;
